[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/paperairplane.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/deathparticle.png" type="Texture" id=3]
[ext_resource path="res://Player/death.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/win.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 6 )

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
max_value = 0.3
_data = [ Vector2( 0, 0.297273 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.642727, 0.0, 0, 0 ]

[node name="Player" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_top = 0.03
drag_margin_right = 0.04
drag_margin_bottom = 0.04

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 2 )
scale_amount_curve = SubResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Airplane_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
